Add features to compiler.